All_Component_DX/force-app/main/default/objects/User_GPS_Log__c/User_GPS_Log__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>User GPS Log is used to store the technician&apos;s location at periodic intervals.
The details of the location of the technician is received from any mobile device in which the technician is logged in.</description>
    <label>User GPS Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User GPS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>