All_Component_DX/force-app/main/default/objects/User_GPS_Log__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <description>If the client is unable to capture the location of the technician then this field will have the information of the reason for which client was unable to capture the location.</description>
    <inlineHelpText>If the client is unable to capture the location of the technician then this field will have the information of the reason for which client was unable to capture the location.</inlineHelpText>
    <label>Additional Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>