All_Component_DX/force-app/main/default/objects/User_GPS_Log__c/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <description>The device from which the technician is logged in.</description>
    <inlineHelpText>The device from which the technician is logged in.</inlineHelpText>
    <label>Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iPad</fullName>
                <default>true</default>
                <label>iPad</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>