All_Component_DX/force-app/main/default/objects/User_GPS_Log__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>to store the latitude of the technician&apos;s location.</description>
    <inlineHelpText>to store the latitude of the technician&apos;s location.</inlineHelpText>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>