All_Component_DX/force-app/main/default/objects/User_GPS_Log__c/fields/Time_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Time_Recorded__c</fullName>
    <description>Time Stamp of the Location Details recorded for the technician.</description>
    <inlineHelpText>Time Stamp of the Location Details recorded for the technician.</inlineHelpText>
    <label>Time Recorded</label>
    <type>DateTime</type>
</CustomField>